--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <module>cloud-providerconsul-payment8006</module>
         <module>cloud-consumerconsul-order81</module>
         <module>cloud-consumer-feign-order81</module>
+        <module>cloud-provider-hystrix-payment8001</module>
+        <module>cloud-consumer-feign-hystrix-order81</module>
+        <module>cloud-consumer-hystrix-dashboard9001</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
